--- a/package.json
+++ b/package.json
@@ -20,15 +20,16 @@
     "webpack-cli": "^3.3.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.10.2",
-    "@babel/preset-env": "^7.10.2",
-    "babel-loader": "^8.1.0",
+    "@babel/core": "^7.17.5",
+    "@babel/preset-env": "^7.16.11",
+    "babel-loader": "^8.2.3",
     "clean-webpack-plugin": "^3.0.0",
-    "css-loader": "^3.6.0",
+    "css-loader": "^5.2.7",
     "html-webpack-plugin": "^3.2.0",
-    "node-sass": "^4.14.1",
-    "sass-loader": "^7.3.1",
-    "style-loader": "^0.23.1",
+    "mini-css-extract-plugin": "^1.3.5",
+    "node-sass": "^5.0.0",
+    "sass-loader": "^10.2.1",
+    "style-loader": "^2.0.0",
     "webpack-dev-server": "^3.7.2"
   }
 }
